[FIXED] fit-content on firefox requires -moz-fit-content instead.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -226,6 +226,7 @@ body {
     cursor: pointer;
     height: 100%;
     width: fit-content;
+    width: -moz-fit-content;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -341,6 +342,7 @@ body {
     display: block;
     top: var(--header-height);
     height: fit-content;
+    height: -moz-fit-content;
     margin-bottom: 5%;
 }
 
@@ -350,6 +352,7 @@ body {
     align-items: center;
     justify-content: center;
     height: fit-content;
+    height: -moz-fit-content;
     padding-bottom: 10%;
 }
 
@@ -374,6 +377,7 @@ body {
     min-height: 87.1vh;
     width: 100%;
     height: fit-content;
+    height: -moz-fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -413,8 +417,10 @@ body {
     border: black solid 0.35vmax;
     color: black;
     min-width: fit-content;
+    min-width: -moz-fit-content;
     width: fit-content;
-    padding: 3% 6%;
+    width: -moz-fit-content;
+    padding: 4% 8%;
     transition: all .25s;
     margin-block: 0;
     margin-top: 3%;
@@ -432,7 +438,9 @@ body {
 #featured-content {
     margin-top: var(--featured-container-top-margin);
     width: fit-content;
+    width: -moz-fit-content;
     height: fit-content;
+    height: -moz-fit-content;
     padding: 2vh 2vw;
 }
 
@@ -447,6 +455,7 @@ body {
 
 #featured-content a {
     min-width: fit-content;
+    min-width: -moz-fit-content;
     text-decoration: none;
     margin-right: 5%;
     margin-left: 5%;
@@ -475,6 +484,7 @@ body {
     justify-content: center;
     width: 100%;
     height: fit-content;
+    height: -moz-fit-content;
 }
 
 /* ---------- Discography/Music ----------------------------*/
@@ -483,6 +493,7 @@ body {
     flex-wrap: wrap;
     width: 100%;
     height: fit-content;
+    height: -moz-fit-content;
 }
 
 .album-container {
@@ -596,6 +607,7 @@ body {
     justify-content: center;
     width: 100%;
     height: fit-content;
+    height: -moz-fit-content;
     margin-top: 2%;
 }
 
@@ -640,22 +652,26 @@ body {
 .calendar-date {
     width: 20%;
     height: fit-content;
+    height: -moz-fit-content;
 }
 
-.calendar-date, .calendar-location {
+.calendar-date, .calendar-location, .calendar-tickets {
     padding: 2% 0 2% 2%;
-    border-right: 0.5px black solid;
+    border: 0.5px black solid;
 }
 
 .calendar-location {
     min-width: fit-content;
+    min-width: -moz-fit-content;
     width: 65%;
     height: fit-content;
+    height: -moz-fit-content;
 }
 
 .calendar-tickets {
     width: 15%;
     height: fit-content;
+    height: -moz-fit-content;
 }
 
 .date, .location-name {
@@ -703,6 +719,7 @@ body {
     position: fixed;
     height: 100vh;
     width: fit-content;
+    width: -moz-fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -719,7 +736,9 @@ body {
     justify-content: center;
     align-items: center;
     width: fit-content;
+    width: -moz-fit-content;
     height: fit-content;
+    height: -moz-fit-content;
     padding: 1% 1% 1% 1%;
     transition: all 0.5s;
 }
@@ -728,6 +747,7 @@ body {
     z-index: 2;
     display: block;
     width: fit-content;
+    width: -moz-fit-content;
     padding-bottom: 10%;
     padding-top: 10%;
 }
@@ -780,6 +800,7 @@ footer {
     border-top: grey 1px solid;
     position: relative;
     height: fit-content;
+    height: -moz-fit-content;
     width: 100%;
     padding: 2vh 0;
 }
@@ -828,6 +849,7 @@ footer {
     text-transform: uppercase;
     border: none;
     width: fit-content;
+    width: -moz-fit-content;
 }
 
 .mailing-list-submit:hover {
